--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-HOST=192.168.0.105
+HOST=10.10.228.107
 PORT=4433
-CERTI=C:\Users\venkat\userprograms\workspace\quictesting\quic\cert.pem
+CERTI=./cert.pem
+OUTDIR=./received_files
+KEY=./key.pem
+SRC=./send_files
