--- a/.env
+++ b/.env
@@ -1,4 +1,16 @@
 HOST=192.168.0.101
-PORT=4433
-CERTI=./cert.pem
-KEY=./key.pem
+PORT='4433'
+CERTI='/home/muruga/userprograms/quic/cert.pem'
+KEY='/home/muruga/userprograms/quic/key.pem'
+DEFAULTIP='192.168.0.101'
+SUBNET='255.255.255.0'
+CIDR='24'
+GATEWAY='192.168.0.1'
+BROADCAST='None'
+PWD='/home/muruga/userprograms/quic'
+USER='muruga'
+SYSTEM='linux'
+INTERFACE='wlan0'
+OUTDIR='/home/muruga/userprograms/quic'
+SRCDIR='/home/muruga/userprograms/quic'
+DEST_HOST=''
