--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DEFAULTIP='192.168.0.101'
 SUBNET='255.255.255.0'
 CIDR='24'
 GATEWAY='192.168.0.1'
-BROADCAST='None'
+BROADCAST='192.168.0.255'
 PWD='/home/muruga/userprograms/quic'
 USER='muruga'
 SYSTEM='linux'
