--- a/.env
+++ b/.env
@@ -13,4 +13,4 @@ SYSTEM='linux'
 INTERFACE='wlan0'
 OUTDIR='/home/muruga/userprograms/quic'
 SRCDIR='/home/muruga/userprograms/quic'
-DEST_HOST=''
+DEST_HOST='192.168.0.101'
