--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
-HOST=192.168.0.101
+HOST='192.168.48.182'
 PORT='4433'
 CERTI='/home/muruga/userprograms/quic/cert.pem'
 KEY='/home/muruga/userprograms/quic/key.pem'
-DEFAULTIP='192.168.0.101'
+HOST='192.168.48.182'
 SUBNET='255.255.255.0'
 CIDR='24'
-GATEWAY='192.168.0.1'
-BROADCAST='192.168.0.255'
+GATEWAY='192.168.48.1'
+BROADCAST='None'
 PWD='/home/muruga/userprograms/quic'
 USER='muruga'
 SYSTEM='linux'
 INTERFACE='wlan0'
 OUTDIR='/home/muruga/userprograms/quic'
 SRCDIR='/home/muruga/userprograms/quic'
-DEST_HOST='192.168.0.101'
+DEST_HOST='172.18.0.2'
