--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ HOST='192.168.48.182'
 SUBNET='255.255.255.0'
 CIDR='24'
 GATEWAY='192.168.48.1'
-BROADCAST='None'
+BROADCAST='192.168.48.255'
 PWD='/home/muruga/userprograms/quic'
 USER='muruga'
 SYSTEM='linux'
-INTERFACE='wlan0'
+INTERFACE='wlan0    inet 192.168.48.182/24 brd 192.168.48.255 scope global dynamic noprefixroute wlan0\       valid_lft 3168sec preferred_lft'
 OUTDIR='/home/muruga/userprograms/quic'
 SRCDIR='/home/muruga/userprograms/quic'
-DEST_HOST='172.18.0.2'
+DEST_HOST=''
