--- a/.env
+++ b/.env
@@ -13,4 +13,4 @@ SYSTEM='linux'
 INTERFACE='wlan0    inet 192.168.0.101/24 brd 192.168.0.255 scope global dynamic noprefixroute wlan0\       valid_lft 86395sec preferred_lft'
 OUTDIR='/home/muruga/userprograms/quic'
 SRCDIR='/home/muruga/userprograms/quic'
-DEST_HOST=''
+DEST_HOST='172.17.0.2'
