--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ BROADCAST='192.168.0.255'
 PWD='/home/muruga/userprograms/quic'
 USER='muruga'
 SYSTEM='linux'
-INTERFACE='wlan0    inet 192.168.0.101/24 brd 192.168.0.255 scope global dynamic noprefixroute wlan0\       valid_lft 86395sec preferred_lft'
+INTERFACE='wlan0'
 OUTDIR='/home/muruga/userprograms/quic'
 SRCDIR='/home/muruga/userprograms/quic'
 DEST_HOST='172.17.0.2'
