--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST='192.168.0.101'
+HOST='192.168.0.100'
 PORT='4433'
 CERTI='/home/muruga/userprograms/quic/cert.pem'
 KEY='/home/muruga/userprograms/quic/key.pem'
@@ -9,7 +9,7 @@ BROADCAST='192.168.0.255'
 PWD='/home/muruga/userprograms/quic'
 USER='muruga'
 SYSTEM='linux'
-INTERFACE='wlan0'
+INTERFACE='wlan0    inet 192.168.0.100/24 brd 192.168.0.255 scope global dynamic noprefixroute wlan0\       valid_lft 86375sec preferred_lft'
 OUTDIR='/home/muruga/userprograms/quic'
 SRCDIR='/home/muruga/userprograms/quic'
-DEST_HOST='192.168.0.100'
+DEST_HOST=''
