--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ BROADCAST='192.168.0.255'
 PWD='/home/muruga/userprograms/quic'
 USER='muruga'
 SYSTEM='linux'
-INTERFACE='wlan0    inet 192.168.0.100/24 brd 192.168.0.255 scope global dynamic noprefixroute wlan0\       valid_lft 86375sec preferred_lft'
+INTERFACE='wlan0'
 OUTDIR='/home/muruga/userprograms/quic'
 SRCDIR='/home/muruga/userprograms/quic'
-DEST_HOST=''
+DEST_HOST='192.168.0.103'
